[package]
name = "async-demo"
version = "0.1.0"
authors = ["Nikola Stoyanov <nikola.da.stoyanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.9"
scraper = "0.12.0"
tokio = { version = "0.2", default-features = false, features = ["rt-core", "rt-threaded"] }
