[package]
name = "async-demo"
version = "0.1.0"
authors = ["Nikola Stoyanov <nikola.da.stoyanov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
scraper = "0.12.0"
tokio = { version = "1.14.0", default-features = false, features = ["rt", "rt-multi-thread"] }
